<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:id="@+id/main">
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/activity_onboarding_scene"
        tools:context=".ui.onboarding.OnboardingActivity">
    
        <ImageView
            android:id="@+id/logoMenu1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/book_welcome_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintVertical_bias="0.3" />
    
        <TextView
            android:id="@+id/titleMenu1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
            app:layout_constraintStart_toStartOf="@+id/logoMenu1"
            app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />
    
        <TextView
            android:id="@+id/descMenu1"
            android:layout_marginHorizontal="24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/description_1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
            app:layout_constraintStart_toStartOf="@+id/titleMenu1"
            app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />
    
        <ImageView
            android:id="@+id/logoMenu2"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintVertical_bias="0.3"
            android:src="@drawable/book_warning" />
    
        <TextView
            android:id="@+id/titleMenu2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
            app:layout_constraintStart_toStartOf="@+id/logoMenu2"
            app:layout_constraintTop_toBottomOf="@+id/logoMenu2"
            android:text="@string/warning" />
    
        <TextView
            android:id="@+id/descMenu2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/description_2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
            app:layout_constraintStart_toStartOf="@+id/titleMenu2"
            app:layout_constraintTop_toBottomOf="@+id/titleMenu2" />
    
        <ImageView
            android:id="@+id/logoMenu3"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintVertical_bias="0.3"
            android:src="@drawable/book_user" />
    
        <TextView
            android:id="@+id/titleMenu3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
            app:layout_constraintStart_toStartOf="@+id/logoMenu3"
            app:layout_constraintTop_toBottomOf="@+id/logoMenu3"
            android:text="@string/getting_started" />
    
        <TextView
            android:id="@+id/descMenu3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/description_3"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
            app:layout_constraintStart_toStartOf="@+id/titleMenu3"
            app:layout_constraintTop_toBottomOf="@+id/titleMenu3" />
    
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/descMenu3"
            app:layout_constraintEnd_toStartOf="@id/login"
            app:layout_constraintStart_toStartOf="parent" 
            tools:alpha="1"/>
    
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/descMenu3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/register"
            tools:alpha="1"/>
        
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            app:altSrc="@drawable/ic_circle_full_24"
            app:layout_constraintEnd_toStartOf="@+id/menu2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/ic_circle_24"
            app:tint="@color/dark_vanilla" />
    
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:altSrc="@drawable/ic_circle_full_24"
            app:layout_constraintBottom_toBottomOf="@+id/menu1"
            app:layout_constraintEnd_toStartOf="@+id/menu3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/menu1"
            app:layout_constraintTop_toTopOf="@+id/menu1"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_circle_24"
            app:tint="@color/dark_vanilla" />
    
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="32dp"
            app:altSrc="@drawable/ic_circle_full_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/menu2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/menu2"
            app:layout_constraintTop_toTopOf="@+id/menu2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_circle_24"
            app:tint="@color/dark_vanilla" />
        
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />
        
    </androidx.constraintlayout.motion.widget.MotionLayout>
</ScrollView>